--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -46,19 +46,6 @@ nav {
     padding: 2em 10%;
   }
 }
-
-@media only screen and (max-width: 768px) {
-  nav {
-    .right-nav {
-      li {
-        .nav-link {
-          padding: 0.5rem 0;
-        }
-      }
-    }
-  }
-}
-
 #grad1 {
   background-color: #9c27b0;
   background-image: linear-gradient(120deg, #ff4081, #81d4fa);
@@ -174,7 +161,6 @@ nav {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.04);
   border-radius: 8px;
-  width: 160px;
   height: 158px;
   margin: 1em 2em;
 }
@@ -230,4 +216,94 @@ footer {
 .form-check-input:checked {
   background-color: #2bbc28 !important;
   border-color: #2bbc28 !important;
+}
+
+.form-content {
+  .btn-lg {
+    font-size: 18px;
+  }
+}
+
+.car-pref-container {
+  padding: 0 10%;
+}
+
+@media only screen and (max-width: 768px) {
+  nav {
+    .right-nav {
+      li {
+        .nav-link {
+          padding: 0.5rem 0;
+        }
+      }
+    }
+  }
+
+  .car-pref {
+    margin: 1em 0;
+    img {
+      width: 50px;
+    }
+  }
+
+  .car-box {
+    height: 75px;
+    width: 100%;
+    margin: 1em 0.5em;
+    img {
+      width: 40px;
+    }
+  }
+
+  #msform fieldset .form-card {
+    font-size: 14px !important;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  #progressbar {
+    overflow: hidden;
+  }
+
+  #progressbar li {
+    width: 33%;
+  }
+
+  .ellipse {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .main-form {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .main-form .card-body {
+    padding: 2em 5%;
+  }
+
+  .form-floating {
+    small {
+      float: left !important;
+    }
+  }
+
+  .form-floating > label {
+    padding: 1rem 0.2rem !important;
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  #progressbar {
+    strong {
+      font-size: 14px;
+      letter-spacing: -0.04em;
+    }
+  }
+
+  .thanks-text {
+    font-size: 18px;
+  }
 }
